# nix-ast

./: .clang-format  .editorconfig  README.md  flake.nix  meson.build  package.nix
.github/workflows/: flake-gha.yml  nix-github-actions.yml
nix/: ec-check.nix  github-actions.nix
src/: ast.md  expr_json.cpp  expr_json.hpp  functor.hpp  is_pair.hpp  meson.build  plug.cpp  polyfill.hpp  rtti.hpp
tests/: test.jq
tests/2.18/: inherit.json  readme.json
tests/2.19/: inherit.json  readme.json
tests/2.20/: inherit.json  readme.json
tests/2.21/: inherit.json  readme.json
tests/2.22/: inherit.json  readme.json
tests/input/: inherit.nix  readme.nix
